--- a/sass/css/main.scss
+++ b/sass/css/main.scss
@@ -5,11 +5,11 @@
 // ----------------------------------------------------------------------------
 
 :root {
-  --color-background: #f8f6f5;
-  --color-default: #3b3a38;
+  --color-background: #f6f5f5;
   --color-highlight: #000;
-  --color-dim: #93918f;
-  --color-vdim: #c9c5c1;
+  --color-default: #3a3132;
+  --color-dim: #9d9899;
+  --color-vdim: #c4c1c2;
   --font-sans: Inter, Helvetica, Segoe UI, Roboto, Arial, sans-serif;
   --font-mono: Menlo, Monaco, Consolas, monospace;
   --font-size: 1.6rem;
@@ -20,6 +20,7 @@
   --spacing-l: calc(1.5 * var(--spacing));
   --spacing-xl: calc(2.5 * var(--spacing));
   --spacing-xxl: calc(5 * var(--spacing));
+  --spacing-width-max: 54rem;
 }
 
 // ----------------------------------------------------------------------------
@@ -33,6 +34,7 @@
 html {
   // Make it so that 1rem = 10px on most browsers.
   font-size: 62.5%;
+  padding: 3.2rem;
 }
 
 body {
@@ -43,8 +45,7 @@ body {
   font-weight: 400;
   line-height: 1.5;
   width: 100%;
-  max-width: 58rem;
-  padding: 4rem;
+  max-width: var(--spacing-width-max);
   margin: 0 auto;
 }
 
@@ -55,10 +56,21 @@ body {
 h1,
 h2,
 h3 {
+  color: var(--color-highlight);
   font-size: var(--font-size);
   font-weight: 500;
-  color: var(--color-highlight);
-  margin: var(--spacing-s) 0;
+}
+
+h1 {
+  margin: 0;
+}
+
+h2 {
+  margin: var(--spacing-m) 0;
+}
+
+h3 {
+  margin: 0;
 }
 
 a {
@@ -69,12 +81,19 @@ a {
 
   &:hover {
     color: var(--color-highlight);
-    transition: color 0.2s ease-in;
+    transition: color 0.3s ease-in;
   }
 }
 
 strong {
-  font-weight: 500;
+  font-weight: 700;
+}
+
+small {
+  display: block;
+  color: var(--color-dim);
+  font-size: var(--font-size-m);
+  line-height: 1.5;
 }
 
 em,
@@ -176,6 +195,24 @@ main {
   padding-bottom: 6rem;
 }
 
+.split {
+  margin-bottom: var(--spacing-m);
+
+  &__label {
+    color: var(--color-dim);
+    font-weight: 500;
+  }
+}
+
+@media (min-width: 540px) {
+  .split {
+    display: grid;
+    grid-template-columns: 8em 1fr;
+    align-items: baseline;
+    margin-bottom: var(--spacing-s);
+  }
+}
+
 // ----------------------------------------------------------------------------
 // Header
 // ----------------------------------------------------------------------------
@@ -185,11 +222,31 @@ header {
   font-weight: 500;
   margin-bottom: var(--spacing-xl);
 
-  h1 {
-    margin: 0;
-  }
-
   a {
     text-decoration: none;
+  }
+}
+
+// ----------------------------------------------------------------------------
+// Home
+// ----------------------------------------------------------------------------
+
+.home {
+  section {
+    margin-bottom: var(--spacing-xl);
+  }
+}
+
+// ----------------------------------------------------------------------------
+// Posts
+// ----------------------------------------------------------------------------
+
+.post {
+  header {
+    margin-bottom: var(--spacing-l);
+  }
+
+  h2 {
+    margin: 0;
   }
 }
