Update page margin and padding

--- a/sass/css/main.scss
+++ b/sass/css/main.scss
@@ -34,7 +34,7 @@
 html {
   // Make it so that 1rem = 10px on most browsers.
   font-size: 62.5%;
-  padding: 3.2rem;
+  padding: 2rem;
 }
 
 body {
@@ -46,7 +46,7 @@ body {
   line-height: 1.5;
   width: 100%;
   max-width: var(--spacing-width-max);
-  margin: 0 auto;
+  margin: 2vw auto;
 }
 
 // ----------------------------------------------------------------------------
