--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,13 @@
   <section>
     <h2>Work Experience</h2>
     <div class="split">
+      <div class="split__label">2024–now</div>
+      <div>
+        <h3>Senior Software Engineer at Rippling</h3>
+        <small>San Francisco, CA</small>
+      </div>
+    </div>
+    <div class="split">
       <div class="split__label">2022–2023</div>
       <div>
         <h3>Senior Software Engineer at Watershed</h3>
